Unterscheidung Hedgehog-Fox fertig

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -229,7 +229,28 @@ finden. Ich positioniere mich zum Igel- oder Fuchsende dieser Skala.
 %\end{spacing}
 \end{quotation}
 Abbildung~\ref{pic:Hedgehog_Fox} erläutert die Skala des \emph{cognitive style}.
-
+\\ \\
+\emph{Hedgehogs} haben einige wenige Glaubenssätze, die sie nutzen um
+Erklärungen für die unterschiedlichsten Dinge abzuleiten (vgl. \cite{Tetlock},
+S.~73). Sie bemühen sich, Fakten in Einklang mit ihren präferierten Grundsätzen
+zu bringen und fällen ihre Urteile, indem sie Schlussfolgerungen aus einer
+kleinen Menge an Überzeugungen ziehen. Zudem zeichnen sich \emph{hedgehogs}
+durch einen geistigen \glqq{Geiz}\grqq (\emph{parsimony}) aus (vgl.
+\cite{Tetlock}, S.~20). Dies bedeutet, dass sie nur ungerne neue Grundsätze
+aufstellen und stattdessen versuchen, mit ihren wenigen, schon vorhandenen
+Glaubenssätzen weitreichende Erklärungen für eine große Bandbreite an Phänomenen
+zu erhalten. Zudem zeichnen sich \emph{hedgehogs} durch eine starke
+Selbstsicherheit in Bezug auf die Genauigkeit ihrer Prognosen und Urteile aus
+(vgl. \cite{Tetlock}, S.~73). \\ \\
+\emph{Foxes} hingegen sind skeptisch bezüglich starker Glaubenssätze, die alles
+umspannende Erklärungen liefern sollen. Stattdessen vertrauen sie auf viele
+Grundsätze mit begrenzter Aussagekraft (\emph{tricks of their trade}) (vgl.
+\cite{Tetlock}, S.~73). Weiterhin ist die Urteilsfindung bei \emph{foxes} keine
+reine Übung in deduktiver Logik (vgl. \cite{Tetlock}, S.~73), sondern benötigt
+die Integration diverser Informationsquellen. \emph{Foxes} sind eher zaghaft,
+wenn es darum geht, ihre eigenen Fähigkeiten als Prognostiker zu loben (vgl.
+\cite{Tetlock}, S.~73-74).
+% (vgl. \cite{Tetlock}, S.~XXX)
 \begin{figure}%[!hbt]
 \centering
 \caption{Skala des \emph{cognitive style}%, mit den Charakterisierungen
@@ -247,7 +268,9 @@ Abbildung~\ref{pic:Hedgehog_Fox} erläutert die Skala des \emph{cognitive style}
 \label{pic:Tetlock_2}
 \end{figure}
 
+\subsection{Analyse der Ergebnisse der Forecasting Exercises}
 
+% parsimony lohnt nicht (S. 68)
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
 Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
