--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -164,9 +164,14 @@ citecolor=MidnightBlue }
 
 \chapter{Predictive Analytics im öffentlichen Sektor}
 
+% Rahmenbedingungen:
+% - Themen kontroverser (vs. z. B. Fruchtsäfte)
+% - Konkurrenz (v. a. bei strategischen Entscheidungen) 
+% - Ignorieren (-> Probleme menschl. Urteile)
+
 \begin{figure}%[!hbt]
 \centering
-\caption{Risikomatrix für die Nutzung maschineller Entscheidungshilfen.}
+\caption{Risikomatrix für die Nutzung maschineller Entscheidungshilfen}
 \includegraphics[scale=1.0]{Grafiken/Risk_Matrix_Ink.pdf} 
 \label{pic:Risiko_Matrix}
 \end{figure}
