--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -230,13 +230,21 @@ finden. Ich positioniere mich zum Igel- oder Fuchsende dieser Skala.
 \end{quotation}
 Abbildung~\ref{pic:Hedgehog_Fox} erläutert die Skala des \emph{cognitive style}.
 \\ \\
+\begin{figure}%[!hbt]
+\centering
+\caption{Skala des \emph{cognitive style}%, mit den Charakterisierungen
+%  \emph{Fox} und \emph{Hedgehog} als Gegenpole}
+}
+\includegraphics[scale=1]{Grafiken/Hedgehog_Fox.pdf} 
+\label{pic:Hedgehog_Fox}
+\end{figure}
 \emph{Hedgehogs} haben einige wenige Glaubenssätze, die sie nutzen um
 Erklärungen für die unterschiedlichsten Dinge abzuleiten (vgl. \cite{Tetlock},
 S.~73). Sie bemühen sich, Fakten in Einklang mit ihren präferierten Grundsätzen
 zu bringen und fällen ihre Urteile, indem sie Schlussfolgerungen aus einer
-kleinen Menge an Überzeugungen ziehen. Zudem zeichnen sich \emph{hedgehogs}
-durch einen geistigen \glqq{Geiz}\grqq (\emph{parsimony}) aus (vgl.
-\cite{Tetlock}, S.~20). Dies bedeutet, dass sie nur ungerne neue Grundsätze
+kleinen Menge an Überzeugungen ziehen. Zudem tendieren \emph{hedgehogs}
+zu intellektuellem \glqq{Geiz}\grqq (\emph{parsimony}) (vgl.\cite{Tetlock}, 
+S.~20). Dies bedeutet, dass sie nur ungerne neue Grundsätze
 aufstellen und stattdessen versuchen, mit ihren wenigen, schon vorhandenen
 Glaubenssätzen weitreichende Erklärungen für eine große Bandbreite an Phänomenen
 zu erhalten. Zudem zeichnen sich \emph{hedgehogs} durch eine starke
@@ -249,17 +257,7 @@ Grundsätze mit begrenzter Aussagekraft (\emph{tricks of their trade}) (vgl.
 reine Übung in deduktiver Logik (vgl. \cite{Tetlock}, S.~73), sondern benötigt
 die Integration diverser Informationsquellen. \emph{Foxes} sind eher zaghaft,
 wenn es darum geht, ihre eigenen Fähigkeiten als Prognostiker zu loben (vgl.
-\cite{Tetlock}, S.~73-74).
-% (vgl. \cite{Tetlock}, S.~XXX)
-\begin{figure}%[!hbt]
-\centering
-\caption{Skala des \emph{cognitive style}%, mit den Charakterisierungen
-%  \emph{Fox} und \emph{Hedgehog} als Gegenpole}
-}
-\includegraphics[scale=1]{Grafiken/Hedgehog_Fox.pdf} 
-\label{pic:Hedgehog_Fox}
-\end{figure}
-
+\cite{Tetlock}, S.~73-74). \\ \\
 \begin{figure}%[!hbt]
 \centering
 \caption{Leistungsunterschiede bei den \emph{forecasting exercises} in
@@ -267,8 +265,16 @@ wenn es darum geht, ihre eigenen Fähigkeiten als Prognostiker zu loben (vgl.
 \includegraphics[scale=0.88]{Grafiken/Tetlock_2_Ink.pdf} 
 \label{pic:Tetlock_2}
 \end{figure}
+Ein Ergebnis von Tetlocks \emph{forecasting exercises} wurde bereits in
+Abbildung~\ref{pic:Tetlock_1} aus Teil~\ref{part:Schw_Vorhersagen} erläutert.
+Dort war ersichtlich, dass die Experten im Vergleich zu statistischen
+Algorithmen schlecht abschnitten. Abbildung~\ref{pic:Tetlock_2} zeigt nun ein
+differenzierteres Bild von der Leistung der Experten.  
+% Urteilskraft einzelner Experten bezüglich Kalibrierung und Diskriminierung
+% variiert 
+%\subsection{Analyse der Ergebnisse der Forecasting Exercises}
 
-\subsection{Analyse der Ergebnisse der Forecasting Exercises}
+% (vgl. \cite{Tetlock}, S.~XXX)
 
 % parsimony lohnt nicht (S. 68)
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
@@ -277,6 +283,11 @@ Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
 (vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil
 nüchterner Realismus unerwünscht ist. Die Aufrechterhaltung von Glaubenssätzen,
 die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
+
+Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
+lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
+Arbeit bestätigt.
+
 
 \begin{table}
 \centering
