Grad Celsius Zeichen kompatibler gemacht

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -104,6 +104,8 @@ acronym,      %ein Abkürzungsverzeichnis erstellen
 toc]          %Einträge im Inhaltsverzeichnis      
 {glossaries}
 \usepackage{cite}
+% degree sign
+\usepackage{gensymb}
 
 \hypersetup{ colorlinks,
 linkcolor=MidnightBlue,
