--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -403,13 +403,13 @@ numerisch.
 Zusätzlich zu
 allen Operationen von nominal und ordinal skalierten Variablen können hier auch
 Additionen und Subtraktionen ausgeführt werden. Ein Beispiel hierfür sind
-Temperaturen in °C, die addiert und subtrahiert werden können. Allerdings sind
-20~°C nicht das Doppelte von 10~°C. Hier kann man erkennen, dass es bei
-Intervallskalen nicht sinnvoll ist, Verhältnisse zu berechnen. Der Grund
-hierfür ist, dass der Nullpunkt einer Intervallskala nicht mit dem absoluten
-Nullpunkt einer Größe identisch sein muss. So sind 0~°C nicht der absolute
-Nullpunkt für die Temperatur. Wenn man sinnvolle Verhältnisse berechnen will,
-wird eine Proportionalskala benötigt. \\ \\
+Temperaturen in \degree{C}, die addiert und subtrahiert werden können.
+Allerdings sind 20~\degree{C} nicht das Doppelte von 10~\degree{C}. Hier kann
+man erkennen, dass es bei Intervallskalen nicht sinnvoll ist, Verhältnisse zu
+berechnen. Der Grund hierfür ist, dass der Nullpunkt einer Intervallskala nicht
+mit dem absoluten Nullpunkt einer Größe identisch sein muss. So sind
+0~\degree{C} nicht der absolute Nullpunkt für die Temperatur. Wenn man sinnvolle
+Verhältnisse berechnen will, wird eine Proportionalskala benötigt. \\ \\
 Eine auf einer Proportionalskala definierte Variable hat numerische Werte, für
 die alle zuvor erwähnten mathematischen Operationen definiert sind und
 zusätzlich auch Multiplikation und Division möglich sind.
@@ -451,7 +451,7 @@ Ordinal & Gleichheit ($=, \neq$), & Kleidungsgröße & \texttt{S}, \texttt{M},
         & Vergleiche ($<, >, \ldots$) & & \\
 \hline
 Intervall & Gleichheit ($=, \neq$), & Jahresangabe, & 2015~n.Chr. \\
-  & Vergleiche ($<, >, \ldots$), & Temperatur in Grad Celsius & 20~°C \\
+  & Vergleiche ($<, >, \ldots$), & Temperatur in Grad Celsius & 20~\degree{C} \\
   & Addition ($+$), Subtraktion ($-$), &  &  \\
 \hline
 Proportional & Gleichheit ($=, \neq$), & Alter, & 21 Jahre \\
