Mehr zum Thema Prognoseleistung

--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -52,13 +52,14 @@ menschlichen Teilnehmer mit den Ergebnissen von einfachen und erweiterten
 statistischen Algorithmen verglichen werden. \\ \\
 Das Ergebnis ist in Abbildung~\ref{pic:Tetlock_1} dargestellt und wird im
 folgenden Text ausführlich erläutert\footnote{Die Grafik ist eine leicht 
-abgewandelte Version vom Original aus \cite{Tetlock}, S. 51).}. \\ \\
+abgewandelte Version vom Original aus \cite{Tetlock} auf S.~51.}. \\ \\
 \begin{figure}%[!hbt]
 \centering
 \caption{Bei den \emph{forecasting exercises} erzielte Wertungen.}
 \includegraphics[scale=1.0]{Grafiken/Tetlock_1_Fertig_Ink.pdf} 
 \label{pic:Tetlock_1}
 \end{figure}
+\label{Kal_Dis}
 Die zwei
 Bestandteile des \emph{probability score}, Kalibrierung (\emph{calibration}) und
 Diskriminierung (\emph{discrimination}), sind auf den Achsen abgebildet. \\ \\ 
@@ -75,7 +76,7 @@ Weiterhin ist ein Prognostiker umso besser bei der Diskriminierungskomponente
 (vertikale Achse),
 je eher es ihm gelingt die Auftrittswahrscheinlichkeiten von einzelnen
 Ereignissen von der relativen Häufigkeit aller Ereignisse\footnote{
-genauer: Das Verhältnis der Anzahl der eingetretenen Ereignisse zu der
+Genauer: Das Verhältnis der Anzahl der eingetretenen Ereignisse zu der
 Gesamtanzahl der Ereignisse} (\emph{base-rate})
 zu unterscheiden. Perfekte Diskriminierung wird erreicht, wenn allen 
 eingetretenen Ereignissen eine Wahrscheinlichkeit von 1.0 zugeordnet wird, und
