--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -268,8 +268,30 @@ wenn es darum geht, ihre eigenen Fähigkeiten als Prognostiker zu loben (vgl.
 Ein Ergebnis von Tetlocks \emph{forecasting exercises} wurde bereits in
 Abbildung~\ref{pic:Tetlock_1} aus Teil~\ref{part:Schw_Vorhersagen} erläutert.
 Dort war ersichtlich, dass die Experten im Vergleich zu statistischen
-Algorithmen schlecht abschnitten. Abbildung~\ref{pic:Tetlock_2} zeigt nun ein
-differenzierteres Bild von der Leistung der Experten.  
+Algorithmen schlecht abschnitten. 
+
+Abbildung~\ref{pic:Tetlock_2} zeigt nun ein differenzierteres Bild von der
+Leistung der Experten\footnote{
+Graphik basierend auf dem Original aus \cite{Tetlock} auf S.~77.
+}. Abgebildet wird die Streuung der Leistung der Prognostiker in Abhängigkeit
+von ihrem jeweiligen \emph{cognitive style}\footnote{
+Wie in Abbildung~\ref{pic:Hedgehog_Fox} wird eine Unterscheidung zwischen
+\emph{foxes}, \emph{fox-hogs}, \emph{hedge-foxes} und \emph{hedgehogs} gemacht.
+}. Abbildung~\ref{pic:Tetlock_2} ist analog zu Abbildung~\ref{pic:Tetlock_1}.
+Insbesondere sind wieder Kalibrierung und Diskriminierung\footnote{
+Kalibrierung und Diskriminierung messen die Qualität der Vorhersagen eines
+menschlichen Prognostikers oder eines (statistischen) Prognosemodells
+(siehe S.~\ref{Kal_Dis}). Kalibrierung beschreibt die Fähigkeit eines
+Prognostikers Ereignisse in richtige Wahrscheinlichkeitskategorien einzuordnen
+(10~\% Ereignisse treten in 10~\% der Fälle ein, 20~\% Ereignisse in 20~\% der
+Fälle usw.). Hohe Diskriminierung hingegen wird erreicht, wenn der Prognostiker
+die Auftrittswahrscheinlichkeit einzelner Ereignisse von der Basisrate (
+\emph{base rate}) aller Ereignisse unterscheiden kann. 
+} in derselben Weise auf den Achsen abgebildet. Je weiter rechts-oben die
+Wertung eines Prognostikers liegt, desto besser hat er bei den
+\emph{forecasting exercises} abgeschnitten. 
+
+  
 % Urteilskraft einzelner Experten bezüglich Kalibrierung und Diskriminierung
 % variiert 
 %\subsection{Analyse der Ergebnisse der Forecasting Exercises}
