--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -289,12 +289,12 @@ die Auftrittswahrscheinlichkeit einzelner Ereignisse von der Basisrate (
 \emph{base rate}) aller Ereignisse unterscheiden kann. 
 } in derselben Weise auf den Achsen abgebildet. Je weiter rechts-oben die
 Wertung eines Prognostikers liegt, desto besser hat er bei den
-\emph{forecasting exercises} abgeschnitten. 
+\emph{forecasting exercises} abgeschnitten.
 
   
 % Urteilskraft einzelner Experten bezüglich Kalibrierung und Diskriminierung
 % variiert 
-%\subsection{Analyse der Ergebnisse der Forecasting Exercises}
+\subsection{Gründe für die schlechte Leistung der Experten}
 
 % (vgl. \cite{Tetlock}, S.~XXX)
 
@@ -302,9 +302,44 @@ Wertung eines Prognostikers liegt, desto besser hat er bei den
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
 Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
-(vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil
-nüchterner Realismus unerwünscht ist. Die Aufrechterhaltung von Glaubenssätzen,
-die zum kollektiven Zusammenhalt beitragen, hat höhere Priorität.
+(vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil keine
+genaue Abbildung der Realität beabsichtigt wird. Die Aufrechterhaltung von
+Glaubenssätzen, die zum kollektiven Zusammenhalt beitragen, hat höhere
+Priorität.
+
+In diesem Zusammenhang sind auch verschiedene Interpretationen des
+Wahrheitsbegriffs bedeutsam. Eine weit verbreitete Interpretation wird mit
+Hilfe des Pragmatismus von William James definiert. Demnach werden
+Aussagen von Menschen als Wahrheit akzeptiert, falls die Aussagen ihnen bei der
+Orientierung in der Welt nützlich sind. Dies liefert eine Erklärung dafür, dass
+Menschen dazu tendieren Aussagen zu glauben, die ihre eigene Weltsicht
+bestätigen. Bei einer extremen Ausprägung des pragmatischen Wahrheitsbegriffs
+wird aus der Nützlichkeit einer Aussage ihr Wahrheitsgehalt abgeleitet:
+\glqq{Es ist wahr, weil es nützlich ist}\grqq. (vgl. \xcom)
+
+Diese radikale Wahrheitsinterpretation ist problematisch, wenn die als Wahrheit
+betrachteten Grundsätze der Realität widersprechen. Denn es gibt keine
+Möglichkeit, die Grundsätze mit Hilfe von empirischen oder logischen Beweisen
+zu revidieren und an die Realität anzupassen. Langfristig führen falsche
+Grundsätze somit zu schlechtem Urteilsvermögen, was wiederum zu schlechten
+Entscheidungen führt. Insbesondere sind Datenanalysen in einer solchen Situation
+nicht zweckdienlich, da Ergebnisse selektiv ignoriert oder abgelehnt werden.
+
+Eine andere Interpretation von Wahrheit legt großen Wert auf die Beweisbarkeit
+von Aussagen. Eine solche Interpretation ist beispielsweise in der Wissenschaft
+verbreitet. Aussagen wird erst dann ein Wahrheitswert zugewiesen, wenn
+unwiderlegbare Beweise für die Gültigkeit der Aussage vorhanden sind. Eine
+solche Interpretation weicht stark vom pragmatischen Standpunkt ab, kann aber
+ebenfalls problematisch werden. Es besteht die Gefahr sich bei der Prüfung von
+Aussagen in Kleinigkeiten zu verlieren, handlungsunfähig zu werden oder
+nützliche Erkenntnisse zu lange anzuzweifeln\footnote{
+Beispiele für Zweifel, die gefährlich werden, weil sie Fortschritt blockieren
+sind auf Seite~\xcom erläutert.
+} 
+
+Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
+notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
+auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
 
 Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
 lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
@@ -373,7 +408,9 @@ Arbeit bestätigt.
 
 \subsection{Auswirkungen von Tetlocks Forschungsergebnissen}
 
-\section{Bestandteile von \emph{predictive analytics}}
+..., also \emph{predictive analytics} zu implementieren.
+
+\section{Bestandteile von Predictive Analytics}
 
 Bei \emph{predictive analytics} werden Daten mit Hilfe von geeigneten Methoden
 verarbeitet, um verschiedene Arten von Prognosen zu ermöglichen. Dem
