--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -162,3 +162,61 @@ year = {2003},
 isbn = {978-3-662-09668-0},
 language = {ngerman}
 }
+
+@misc{Precht,
+author = {Precht, Richard David},
+title = {Schöne neue Medienwelt - Wer hat die Meinungsmacht? - Min 23+},
+howpublished = {ZDF Mediathek},
+year = {2020},
+note = {Zugegriffen am: 03.11.2020},
+url = {https://www.zdf.de/gesellschaft/precht/precht-216.html},
+language = {ngerman}
+}
+
+@article{Roetheli,
+author = {Rötheli, Tobias},
+title = {Superforecasting: the art and science of prediction - Review},
+journal = {Foresight},
+volume = {19},
+number = {2},
+pages = {256-258},
+year = {2017},
+url = {https://doi.org/10.1108/FS-12-2016-0061},
+language = {english}
+}
+
+@article{Roche,
+author = {Roche, Edward},
+title = {Superforecasting: the art and science of prediction - Review},
+journal = {Journal of strategic security},
+volume = {9},
+number = {1},
+pages = {144-145},
+year = {2016},
+url = {https://doi.org/10.5038/1944-0472.9.1.1519},
+language = {english}
+}
+
+@article{Jackson,
+author = {Jackson, Alexander and Reichin, Sydney},
+title = {Superforecasting: the art and science of prediction - Review},
+journal = {Personnel Psychology},
+volume = {71},
+number = {2},
+pages = {292-295},
+year = {2018},
+url = {https://doi.org/10.1111/peps.12272},
+language = {english}
+}
+
+@article{Buncic,
+author = {Buncic, Daniel},
+title = {Superforecasting: the art and science of prediction - Review},
+journal = {Risks},
+volume = {4},
+number = {3},
+pages = {24},
+year = {2016},
+url = {https://doi.org/10.3390/risks4030024},
+language = {english}
+}
