--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -291,9 +291,15 @@ die Auftrittswahrscheinlichkeit einzelner Ereignisse von der Basisrate (
 Wertung eines Prognostikers liegt, desto besser hat er bei den
 \emph{forecasting exercises} abgeschnitten.
 
-  
-% Urteilskraft einzelner Experten bezüglich Kalibrierung und Diskriminierung
-% variiert 
+In Abbildung~\ref{pic:Tetlock_2} wird deutlich, dass die Urteilskraft der
+Expertengruppen im Hinblick auf Kalibrierung und Diskriminierung variiert. Die
+\emph{hedgehogs} erzielen die schlechtesten Wertungen unter den Experten,
+während \emph{foxes} und \emph{fox-hogs} die besten Wertungen erhalten.
+Insbesondere sind \emph{foxes} den \emph{hedgehogs} sowohl bezüglich der
+Kalibrierungs- als auch bezüglich der Diskriminierungswertung überlegen. 
+
+% S. 276 Indiscriminate fence-sitting
+ 
 \subsection{Gründe für die schlechte Leistung der Experten}
 
 % (vgl. \cite{Tetlock}, S.~XXX)
@@ -315,7 +321,7 @@ Orientierung in der Welt nützlich sind. Dies liefert eine Erklärung dafür, da
 Menschen dazu tendieren Aussagen zu glauben, die ihre eigene Weltsicht
 bestätigen. Bei einer extremen Ausprägung des pragmatischen Wahrheitsbegriffs
 wird aus der Nützlichkeit einer Aussage ihr Wahrheitsgehalt abgeleitet:
-\glqq{Es ist wahr, weil es nützlich ist}\grqq. (vgl. \xcom)
+\glqq{Es ist wahr, weil es nützlich ist}\grqq. (vgl. \cite{Precht})
 
 Diese radikale Wahrheitsinterpretation ist problematisch, wenn die als Wahrheit
 betrachteten Grundsätze der Realität widersprechen. Denn es gibt keine
@@ -335,7 +341,7 @@ Aussagen in Kleinigkeiten zu verlieren, handlungsunfähig zu werden oder
 nützliche Erkenntnisse zu lange anzuzweifeln\footnote{
 Beispiele für Zweifel, die gefährlich werden, weil sie Fortschritt blockieren
 sind auf Seite~\xcom erläutert.
-} 
+}.
 
 Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
 notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
