--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -166,10 +166,11 @@ citecolor=MidnightBlue }
 
 \chapter{Predictive Analytics im öffentlichen Sektor}
 
-% Rahmenbedingungen:
-% - Themen kontroverser (vs. z. B. Fruchtsäfte)
-% - Konkurrenz (v. a. bei strategischen Entscheidungen) 
-% - Ignorieren (-> Probleme menschl. Urteile)
+% TODO
+% Stand Entscheidungshilfen (wie vorstellbar: Mensch entscheidet, Computer
+%   unterstützt)
+% Abgrenzung zum privaten Sektor
+% auf operativer Ebene allerdings ähnlich
 
 \begin{figure}%[!hbt]
 \centering
@@ -178,36 +179,34 @@ citecolor=MidnightBlue }
 \label{pic:Risiko_Matrix}
 \end{figure}
 
-\section{Übersicht}
+\section{Rahmenbedingungen}
 
-\section{Thematische Schwerpunkte}
-\todo{Wo könnte der größte Nutzen liegen?}
+% TODO
+% Rahmenbedingungen:
+% - Themen kontroverser (vs. z. B. Fruchtsäfte)
+% - Konkurrenz (v. a. bei strategischen Entscheidungen) 
+% - Ignorieren (-> Probleme menschl. Urteile)
 
-\todo{vorläufig:}
+\section{Spieltheoretische Betrachtung}
+
+%-------------------------------------------------------------------------------
+\section{Anwendungen von Predictive Analytics im öffentlichen Sektor}
+
+% Auswahl
+% TODO Fallstudien einfach ausführlichere Beispiele
 
 \subsection{Öffentliche Verwaltung}
 
-\subsubsection{Daten in der öffentlichen Verwaltung}
+% TODO
+% Daten in der öffentlichen Verwaltung
+% Open Data Portale ( GovData.de )
+% Abgrenzung zu 'Nowcasting'
+% Predictive Analytics in Finanzbehörden
+% Predictive Policing
+% Einschätzung der politischen Stimmungslage
+% Vorhersage kultureller Unterschiede
 
-\paragraph{Open Data Portale ( GovData.de )}
-
-\subsubsection{Organisationseinheiten für Predictive Analytics}
-
-\paragraph{\ldots}
-
-\subsection{Gesundheit}
-
-\subsection{Bildung}
-
-\chapter{Gegenwärtige Anwendungen}
-
-\section{Predictive Analytics in Finanzbehörden}
-
-\section{Google Flu Trends}
-
-\section{Predictive Policing}
-
-\section{Cambridge Analytica}
+\subsubsection{Cambridge Analytica - Fallstudie}
 
 \begin{figure}%[!hbt]
 \centering
@@ -216,32 +215,44 @@ citecolor=MidnightBlue }
 \label{pic:Like_Matrix}
 \end{figure}
 
-% TODO Auflistungstabelle
-% Kategorie | Anwendung | Beispiel
+\subsection{Öffentliche Gesundheit}
 
-\chapter{Zukunftsperspektiven}
+% TODO
+% Google Flu Trends (vorerst gescheitert) 
 
-\section{\ldots}
+\subsubsection{Flint Trinkwasserskandal - Fallstudie}
 
-\section{Einschätzung der politischen Stimmungslage}
+\subsection{Bildung}
 
-\section{Vorhersage kultureller Unterschiede}
+% Anwendungsbeispiel Decision Tree
 
+% TODO echten Titel ersinnen
 \chapter{Zusammenfassung und Fazit}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
+% TODO evtl umbennen 
 \chapter{Probablility Scoring - Vertiefung}
+
+% TODO
+% Brier Score Erklärung
+% Brier Score Probleme
+%   Vorhersage unwahrscheinlicher Ereignisse nicht gewürdigt
+%   50/50 fence sitters -> Frustration (need for closure)
+%   
+% Bayes Belief Updating Erklärung/Herleitung
+% Kognitive Verzerrungen, Auflistung, Diskussion
+%   Erlernbar oder nicht (- individuell nicht gelungen, + in Gruppe, 
+%     Kommunikation hilft, Unterschiede nicht unüberwindbar)
+% + eher statistisch, mathematische "Verzerrungen" (subadditivity ...)
+% 11 Commandments GJP
 
 \chapter{Predictive Analytics mit R}
 
-\section{Tabellenkalkulationen versus R}
-
-Inhalt vom ersten Anhang.
-
-\section{Beispielhafte Auswertung eines Datensatzes}
-
-Inhalt des zweiten Anhang.
+% TODO
+% Kurzvorstellung R, Vergleich mit anderen Werkzeugen (insb. Python)
+% vllt R stark in Grafik
+% R Verwendung in Verwaltungen
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
