--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -172,6 +172,8 @@ citecolor=MidnightBlue }
 % Abgrenzung zum privaten Sektor
 % auf operativer Ebene allerdings ähnlich
 
+% s. Watson, Abschnitt Lack of regulation and algorithm bias
+% TODO bias insgesamt (in Rahmenbedingungen)
 \begin{figure}%[!hbt]
 \centering
 \caption{Risikomatrix für die Nutzung maschineller Entscheidungshilfen}
@@ -183,11 +185,15 @@ citecolor=MidnightBlue }
 
 % TODO
 % Rahmenbedingungen:
+% - Wahrheit taktisch genutzt
+% - versch. Gruppen/Kulturen -> versch. Wahrheiten
 % - Themen kontroverser (vs. z. B. Fruchtsäfte)
 % - Konkurrenz (v. a. bei strategischen Entscheidungen) 
 % - Ignorieren (-> Probleme menschl. Urteile)
 
 \section{Spieltheoretische Betrachtung}
+
+
 
 %-------------------------------------------------------------------------------
 \section{Anwendungen von Predictive Analytics im öffentlichen Sektor}
@@ -218,8 +224,12 @@ citecolor=MidnightBlue }
 \subsection{Öffentliche Gesundheit}
 
 % TODO
-% Google Flu Trends (vorerst gescheitert) 
-
+% Google Flu Trends (vorerst gescheitert)
+% Kohortenstudien nützlich bei: bsp. Kampagnen zur öffentlichen Gesundheit
+%   bsp. Ernährungskampagnen, Anti-Rauch-Kampagnen 
+% Kohortenstudien: nicht persönlich (s. Watson, Abschnitt Cohort treatment),
+%   aber Sicherheitsbedenken bleiben (Anonymisierung nicht möglich, Sicherheits
+%   risiken ...)
 \subsubsection{Flint Trinkwasserskandal - Fallstudie}
 
 \subsection{Bildung}
@@ -238,8 +248,8 @@ citecolor=MidnightBlue }
 % Brier Score Erklärung
 % Brier Score Probleme
 %   Vorhersage unwahrscheinlicher Ereignisse nicht gewürdigt
-%   50/50 fence sitters -> Frustration (need for closure)
-%   
+%   50/50 fence sitters -> unbefriedigend, Frustration (need for closure)
+%   % S. 276 Indiscriminate fence-sitting
 % Bayes Belief Updating Erklärung/Herleitung
 % Kognitive Verzerrungen, Auflistung, Diskussion
 %   Erlernbar oder nicht (- individuell nicht gelungen, + in Gruppe, 
