--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -117,12 +117,14 @@ Variablen, die eine hohe Vorhersagekraft besitzen.\footnote{Die genaue Zuordnung
 der Stufen 0-3 zu den Algorithmen in der Originalquelle (\cite{Tetlock}, S.~51)
 sieht folgendermaßen aus:
 \begin{description}
-\item[Stufe 0:] \emph{random guessing} (\emph{chimp})
-\item[Stufe 1:] \emph{contemporary base rate} (1-1), \emph{restrictive base
-  rate} (1-2), \emph{expansive base rate} (1-3)
-\item[Stufe 2:] \emph{cautious case-specific extrapolation} (2-1),
-  \emph{aggressive case-specific extrapolation} (2-2)
-\item[Stufe 3:] \emph{autoregressive distributed lag models}
+\item[Stufe 0 (Zufallsalgorithmus):] \emph{random guessing} (\emph{chimp})
+\item[Stufe 1 (Auf Basisraten basierende Algorithmen):] 
+  \emph{contemporary base rate} (1-1), \emph{restrictive base rate} (1-2),
+  \emph{expansive base rate} (1-3)
+\item[Stufe 2 (Extrapolationsalgorithmen):] \emph{cautious case-specific
+  extrapolation} (2-1), \emph{aggressive case-specific extrapolation} (2-2)
+\item[Stufe 3 (Autoregressive Algorithmen):] \emph{autoregressive distributed
+  lag models}
 \end{description}
 } \\ \\
 Abbildung~\ref{pic:Tetlock_1} zeigt, dass die Experten die Studenten bei
