--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -283,7 +283,7 @@ Kalibrierung und Diskriminierung messen die Qualität der Vorhersagen eines
 menschlichen Prognostikers oder eines (statistischen) Prognosemodells
 (siehe S.~\ref{Kal_Dis}). Kalibrierung beschreibt die Fähigkeit eines
 Prognostikers Ereignisse in richtige Wahrscheinlichkeitskategorien einzuordnen
-(10~\% Ereignisse treten in 10~\% der Fälle ein, 20~\% Ereignisse in 20~\% der
+(10\%-Ereignisse treten in 10~\% der Fälle ein, 20\%-Ereignisse in 20~\% der
 Fälle usw.). Hohe Diskriminierung hingegen wird erreicht, wenn der Prognostiker
 die Auftrittswahrscheinlichkeit einzelner Ereignisse von der Basisrate (
 \emph{base rate}) aller Ereignisse unterscheiden kann. 
@@ -298,13 +298,14 @@ während \emph{foxes} und \emph{fox-hogs} die besten Wertungen erhalten.
 Insbesondere sind \emph{foxes} den \emph{hedgehogs} sowohl bezüglich der
 Kalibrierungs- als auch bezüglich der Diskriminierungswertung überlegen. 
 
-% S. 276 Indiscriminate fence-sitting
+% foxes nicht überragend
  
 \subsection{Gründe für die schlechte Leistung der Experten}
 
 % (vgl. \cite{Tetlock}, S.~XXX)
 
 % parsimony lohnt nicht (S. 68)
+%-------------------------------------------------------------------------------
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
 Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
@@ -346,7 +347,7 @@ sind auf Seite~\xcom erläutert.
 Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
 notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
 auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
-
+%-------------------------------------------------------------------------------
 Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
 lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
 Arbeit bestätigt.
