Ergebnisse der Forecasting Exercises fertig

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -265,7 +265,16 @@ citecolor=MidnightBlue }
 % R Verwendung in Verwaltungen
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% TODO vllt Zusatzmaterial:
 
+% Tetlock S. 63: systematic distortions in the media markets for intellectual
+%   commentary
+
+% Bayes belief updating konvergiert (Arens)
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \listoffigures
 \listoftables
 \printglossary[title=Glossar]
