--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -173,6 +173,16 @@ url = {https://www.zdf.de/gesellschaft/precht/precht-216.html},
 language = {ngerman}
 }
 
+@misc{Viken,
+author = {Viken, Katharina Gellein and Kriel, Charles},
+title = {US-Wahl 2020: Dunkle Machenschaften - Wie mit Daten die US-Wahlen beeinflusst werden},
+howpublished = {ZDF Mediathek},
+year = {2020},
+note = {Zugegriffen am: 11.11.2020},
+url = {https://www.zdf.de/dokumentation/zdfzoom/us-wahl-2020-zdfzoom---dunkle-machenschaften-100.html},
+language = {ngerman}
+}
+
 @article{Roetheli,
 author = {Rötheli, Tobias},
 title = {Superforecasting: the art and science of prediction - Review},
