--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -144,14 +144,14 @@ Bereichen Politik und Wirtschaft\footnote{
 Andere Themen, wie beispielweise naturwissenschaftliche Fragestellungen,
 z. B. \glqq{Wie} wahrscheinlich ist die Detektion dunkler Materie
 in den nächsten fünf Jahren?\grqq, wurden nicht behandelt.
-}, was für den öffentlichen Sektor relevant ist. Zweitens handelt es sich dabei
-um generelle Probleme der menschlichen Urteilsfindung. Probleme, die in vielen
-Bereichen auftreten und zu Fehleinschätzungen führen können. Zudem
-konnten datenbasierte Algorithmen, also \emph{predictive analytics}, die
-menschlichen Vorhersagen bei den \emph{forecasting exercises} schlagen. Dies
-deutet darauf hin, dass formale Methoden wie \emph{predictive analytics} dabei
-helfen können, bessere Urteile zu fällen und folglich auch bessere
-Entscheidungen zu treffen. \\ \\
+}, was insbesondere für den öffentlichen Sektor relevant ist. Zweitens handelt
+es sich dabei um generelle Probleme der menschlichen Urteilsfindung.
+Probleme, die in vielen Bereichen auftreten und zu Fehleinschätzungen führen
+können. Zudem konnten datenbasierte Algorithmen, also
+\emph{predictive analytics}, die menschlichen Vorhersagen bei den 
+\emph{forecasting exercises} schlagen. Dies deutet darauf hin, dass formale
+Methoden wie \emph{predictive analytics} dabei helfen können, bessere Urteile 
+zu fällen und folglich auch bessere Entscheidungen zu treffen. \\ \\
 Der nächste Teil der Arbeit behandelt \emph{predictive analytics},
 den Prozess der (menschlichen) Urteilsfindung und wie formale Methoden diesen
 Prozess verbessern können.
