--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -296,7 +296,22 @@ Expertengruppen im Hinblick auf Kalibrierung und Diskriminierung variiert. Die
 \emph{hedgehogs} erzielen die schlechtesten Wertungen unter den Experten,
 während \emph{foxes} und \emph{fox-hogs} die besten Wertungen erhalten.
 Insbesondere sind \emph{foxes} den \emph{hedgehogs} sowohl bezüglich der
-Kalibrierungs- als auch bezüglich der Diskriminierungswertung überlegen. 
+Kalibrierungs- als auch bezüglich der Diskriminierungswertung überlegen.
+
+Die statistischen Algorithmen waren allerdings besser als \emph{foxes} und
+\emph{hedgehogs}. Die besten \emph{foxes} erhielten ähnliche Wertungen wie
+Extrapolationsalgorithmen. \emph{Hedgehogs} machten hingegen so große Fehler,
+dass ihre Wertungen in der Nähe des zufallsbasierten Algorithmus liegen
+\footnote{
+Tetlock gebraucht als Umschreibung für den zufallsbasierten Algorithmus die
+Metapher des \glqq{Dart spielenden Schimpansen}\grqq
+(\emph{dart-throwing chimp}).
+}. Insgesamt konnte keiner der Experten, weder \emph{foxes} noch
+\emph{hedgehogs} auch nur annähernd in die Nähe der Wertung kommen, die vom
+autoregressiven Modell\footnote{
+Als Stufe 3 Algorithmus in Abbildung~\ref{pic:Tetlock_1} und als formales
+Modell in Abbildung~\ref{pic:Tetlock_2} bezeichnet.
+} erreicht wurde. (vgl. \cite{Tetlock}, S.~118)
 
 % foxes nicht überragend
  
@@ -414,6 +429,14 @@ Arbeit bestätigt.
 \end{table}
 
 \subsection{Auswirkungen von Tetlocks Forschungsergebnissen}
+
+% TODO Zusammenfassung
+% - Brier Score: große Zahlen -> Evidence
+% - Bayes + einfache Statistische Regeln als Hilfswerkzeug
+% - besser fox als hedgehog sein
+% - Versuchen Kognitive Verzerrungen abzumildern
+% - no thought above criticism (S. 118)
+% - wenn möglich komplexere statistische Algorithmen verwenden
 
 ..., also \emph{predictive analytics} zu implementieren.
 
