--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -193,8 +193,41 @@ citecolor=MidnightBlue }
 
 \section{Spieltheoretische Betrachtung}
 
+% TODO
 
 
+% deadlock (S. 218(
+\begin{figure}%[!hbt]
+\centering
+\caption{Deadlock Auszahlungsmatrix}
+\includegraphics[scale=0.8]{Grafiken/Deadlock_Ink.pdf} 
+\label{pic:Deadlock}
+\end{figure}
+
+% stag hunt (S. 220)
+\begin{figure}%[!hbt]
+\centering
+\caption{Stag Hunt Auszahlungsmatrix}
+\includegraphics[scale=0.8]{Grafiken/Stag_Hunt_Ink.pdf} 
+\label{pic:StagHunt}
+\end{figure}
+
+% mixed
+\begin{figure}%[!hbt]
+\centering
+\caption{Gemischte Stag Hunt-Deadlock Auszahlungsmatrix}
+\includegraphics[scale=0.8]{Grafiken/Mixed_Ink.pdf} 
+\label{pic:Mixed}
+\end{figure}
+
+% prisoners dilemma (S.237)
+% mixed
+\begin{figure}%[!hbt]
+\centering
+\caption{Gefangenendilemma Auszahlungsmatrix}
+\includegraphics[scale=0.8]{Grafiken/Prisoner_Ink.pdf} 
+\label{pic:Prisoner}
+\end{figure}
 %-------------------------------------------------------------------------------
 \section{Anwendungen von Predictive Analytics im öffentlichen Sektor}
 
