--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -1,7 +1,7 @@
 \chapter{Konzepte von Predictive Analytics}
 \label{part:Konzepte_PA}
 
-\section{Begriffsdefinition und -Abgrenzung}
+\section{Begriffsdefinition}
 
 Das primäre Ziel von \emph{\gls{glos:Predictive_Analytics}} ist das Treffen von
 Vorhersagen.
@@ -53,6 +53,51 @@ Versicherung als Eingabe nehmen und könnte als Ausgabe eine Zahl zwischen 0 und
 interpretiert werden, dass es sich bei der neuen Forderung um einen Betrugsfall
 handelt. 
 
+\section{Begriffsabgrenzung}
+
+Unter \emph{data mining} versteht man das Nutzen von statistischen Methoden zur
+Analyse großer Datenmengen mit dem Ziel, neue Erkenntnisse zum untersuchten 
+Thema oder Objekt zu erlangen\footnote{
+Der Begriff \emph{data mining} ist also nicht wörtlich zu verstehen. Gemeint ist
+nicht die Gewinnung von Daten, sondern die Gewinnung von Erkenntnissen aus den
+Daten.
+}
+(vgl. \cite{McCarthy}, S.~6). Es bestehen große Schnittmengen mit
+\emph{predictive analytics}, insbesondere im Hinblick auf die Nutzung der
+gleichen Methoden und Werkzeuge. Allerdings steht bei \emph{data mining} nicht
+explizit die Erstellung von Vorhersagen im Vordergrund.
+
+\emph{Data science} kann als interdisziplinäres Feld verstanden werden, das mit
+großen und komplexen Datenbeständen arbeitet. Das Ziel von \emph{data science}
+ist die Entwicklung von Algorithmen und Werkzeugen, die in der Lage sind, diese
+Datenbestände zu nutzen, um Systeme zur Entscheidungsunterstützung zu
+implementieren (\emph{semiautomated decision support systems}). (vgl.
+\cite{Dinov}, S.~9)
+
+Im Gegensatz zu \emph{predictive analytics} steht bei \emph{data science} eher
+die Entwicklung von Algorithmen im Vordergrund. Bei \emph{predictive analytics}
+hingegen steht die Anwendung dieser Methoden im Fokus.
+
+\emph{Business analytics} wir als Oberbegriff für Prozesse gesehen, die
+Analysemodelle im geschäftlichen Kontext erstellen . \emph{Predictive analytics}
+und \emph{data mining} werden dann als Bestandteil von \emph{business analytics}
+gesehen. (vgl. \cite{McCarthy}, S.~6))
+
+\emph{Business intelligence} ist ein zu \emph{business analytics} ähnlicher
+Begriff und steht allgemein für Anwendungen und Techniken, die im
+Geschäftsumfeld zur Entscheidungsunterstützung und zur Generierung von
+Einsichten genutzt werden\footnote{
+Manche Autoren betrachten den Begriff \emph{intelligence} als Anspielung auf die
+gängige, englische Bezeichung für Aufklärungs- und Nachrichtendienste, wie
+beispielsweise die CIA.
+}. (vgl. \cite{Gluchowski}, S.~89-90) 
+
+Damit kann \emph{predictive analytics}, ähnlich wie bei \emph{business
+analytics}, als ein Bestandteil von \emph{business intelligence} eingeordnet
+werden (vgl. \cite{Gluchowski}, S.~92). 
+
+%Aufgrund der Ähnlichkeit und der gegenseitigen Abhängigkeit der Begriffe,
+%besteht die Gefahr... 
 
 \section{Probleme menschlicher Urteile}
 
@@ -313,13 +358,16 @@ Als Stufe 3 Algorithmus in Abbildung~\ref{pic:Tetlock_1} und als formales
 Modell in Abbildung~\ref{pic:Tetlock_2} bezeichnet.
 } erreicht wurde. (vgl. \cite{Tetlock}, S.~118)
 
-% foxes nicht überragend
  
 \subsection{Gründe für die schlechte Leistung der Experten}
 
 % (vgl. \cite{Tetlock}, S.~XXX)
 
-% parsimony lohnt nicht (S. 68)
+Die Fähigkeit, mit wenigen Grundregeln oder Axiomen auszukommen, die in der
+Wissenschaft geschätzt wird, scheint sich in eine Schwäche zu verwandeln, wenn
+es darum geht, Prognosen für die reale Welt zu erstellen (vgl. \cite{Tetlock},
+S.~68).
+
 %-------------------------------------------------------------------------------
 Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
@@ -362,6 +410,9 @@ sind auf Seite~\xcom erläutert.
 Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
 notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
 auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
+Bedauerlicherweise gerät ein solcher Pragmatismus mit jeder, insbesondere
+politischen, Weltanschauung in Konflikt, die selbst nicht in dieser Art
+pragmatisch ist.
 %-------------------------------------------------------------------------------
 Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
 lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
